View Issue Details

IDProjectCategoryView StatusLast Update
0024728Open CASCADEOCCT:Visualizationpublic2014-11-11 12:51
Reporterbugmaster Assigned Tobugmaster  
PriorityurgentSeveritymajor 
Status closedResolutionfixed 
Target Version6.8.0Fixed in Version6.8.0 
Summary0024728: A lot of tests are crashed on vdump command on Windows in debug mode
DescriptionSee results:

http://jenkins-test-02.nnov.opencascade.com:8080/user/inv/my-views/view/Master%20testing%20Windows/job/mnt-master-master_occt_tests_windows_start_deb/157/

pload MODELING VISUALIZATION
box b 1 2 3
vcaps soft=1
vinit View1
vclear
vdisplay b
vfit
vdump ggg.png


An exception was caught 008F1754 : Standard_NumericError: FLT MULTIPLE TRAPS (possible overflow in conversion of double to integer)
TagsNo tags attached.
Test case numberbugs vis(004) bug24728

Relationships

related to 0024413 closedabv Visualization - get rid of projection shift from orthographic camera definition 

Activities

kgv

2014-03-14 13:07

developer   ~0028279

+  if (theToKeepAspect)
+  {
+    myCamera->SetAspect ((Standard_Real) aFBOVPSizeX / aFBOSizeYMax);
   }

Dear apl,

could you please fix division by zero in this place (aFBOSizeYMax is 0 here)?

apl

2014-03-14 15:26

developer   ~0028287

Dear Kirill,

Could you please review branch CR24728?

kgv

2014-03-14 15:33

developer   ~0028288

Last edited: 2014-03-14 15:41

Dear bugmaster,

please test the fix. Notice that differences with reference snapshots are expected due to small change in aspect ratio (for snapshots taken using FBO).

mkv

2014-03-18 19:10

tester   ~0028333

Dear BugMaster,

Branch CR24728 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: ef19ae5c1a657699aa5daa5a1ad3945ee8c98d8d

Number of compiler warnings:

occt component :
Linux: 30 (30 on master)
Windows: 0 (0 on master)

products component :
Linux: 12 (12 on master)
Windows: 2 (2 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
http://occt-tests/CR24728-master-occt/Debian60-64/bugs/vis/bug24728.html
http://occt-tests/CR24728-master-occt/Windows-32-VC9/bugs/vis/bug24728.html
bugs vis(004) bug24728: OK

Testing on Linux:
Total MEMORY difference: 386006860 / 386276008
Total CPU difference: 48888.859999999855 / 48827.5

Testing on Windows:
Total MEMORY difference: 430520076 / 430913404
Total CPU difference: 35223.140625 / 35761.53125

There are not differences in images found by testdiff.

Related Changesets

occt: master 54328915

2014-03-14 11:30:29

apl


Committer: bugmaster Details Diff
0024728: A lot of tests are crashed on vdump command on Windows in debug mode Affected Issues
0024728
mod - src/V3d/V3d_View.cxx Diff File
add - tests/bugs/vis/bug24728 Diff File

Issue History

Date Modified Username Field Change
2014-03-14 12:11 bugmaster New Issue
2014-03-14 12:11 bugmaster Assigned To => san
2014-03-14 12:11 bugmaster Priority normal => urgent
2014-03-14 13:07 kgv Note Added: 0028279
2014-03-14 13:58 bugmaster Project OCCT => Open CASCADE
2014-03-14 13:58 kgv Assigned To san => apl
2014-03-14 13:58 kgv Status new => assigned
2014-03-14 13:59 kgv Description Updated
2014-03-14 14:02 kgv Description Updated
2014-03-14 15:26 apl Note Added: 0028287
2014-03-14 15:26 apl Assigned To apl => kgv
2014-03-14 15:26 apl Status assigned => resolved
2014-03-14 15:33 kgv Note Added: 0028288
2014-03-14 15:33 kgv Assigned To kgv => bugmaster
2014-03-14 15:33 kgv Status resolved => reviewed
2014-03-14 15:34 kgv Relationship added related to 0024413
2014-03-14 15:41 kgv Note Edited: 0028288
2014-03-14 16:17 bugmaster Assigned To bugmaster => mkv
2014-03-18 19:10 mkv Note Added: 0028333
2014-03-18 19:10 mkv Test case number => bugs vis(004) bug24728
2014-03-18 19:10 mkv Assigned To mkv => bugmaster
2014-03-18 19:10 mkv Status reviewed => tested
2014-03-21 16:18 bugmaster Changeset attached => occt master 54328915
2014-03-21 16:18 bugmaster Status tested => verified
2014-03-21 16:18 bugmaster Resolution open => fixed
2014-04-04 13:37 abv Target Version 6.7.1 => 6.8.0
2014-11-11 12:47 aiv Fixed in Version => 6.8.0
2014-11-11 12:51 aiv Status verified => closed