0024728: A lot of tests are crashed on vdump command on Windows in debug mode